--- a/clic/cloud/views/hello.ejs
+++ b/clic/cloud/views/hello.ejs
@@ -1,11 +1,23 @@
 
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Sample App</title>
-  </head>
-  <body>
-    <h1>Hello World</h1>
-    <p><%= message %></p>
-  </body>
+<head>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
+<title>Clic</title>
+</head>
+
+<body>
+Clic
+
+
+</body>
+
 </html>
