--- a/clic/cloud/views/index.ejs
+++ b/clic/cloud/views/index.ejs
@@ -7,7 +7,9 @@
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
 
 <!-- Latest compiled and minified JavaScript -->
+<script src="//code.jquery.com/jquery-2.0.3.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
 
 <title>Clic</title>
 </head>
