--- a/clic/cloud/views/index.ejs
+++ b/clic/cloud/views/index.ejs
@@ -9,7 +9,8 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="//code.jquery.com/jquery-2.0.3.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-
+<script src="//www.parsecdn.com/js/parse-1.2.15.min.js"></script>
+<script src="/js/main.js"></script>
 
 <title>Clic</title>
 </head>
@@ -17,39 +18,41 @@
 <body>
 <div id="fb-root"></div>
 <script>
+
+  Parse.initialize("WNuvF7tEVvhuIogQV3R0HiyqveHx6pCEnM6PYLrZ", "5sCXb57z3P16uYDFMMmMf0NSBznyUmEtXzWxjb9B");
   window.fbAsyncInit = function() {
-  FB.init({
+  Parse.FacebookUtils.init({
     appId      : '750123595016715',
-    status     : true, // check login status
+    status     : true,
     cookie     : true, // enable cookies to allow the server to access the session
     xfbml      : true  // parse XFBML
   });
 
   // Here we subscribe to the auth.authResponseChange JavaScript event. This event is fired
   // for any authentication related change, such as login, logout or session refresh. This means that
-  // whenever someone who was previously logged out tries to log in again, the correct case below 
-  // will be handled. 
+  // whenever someone who was previously logged out tries to log in again, the correct case below
+  // will be handled.
   FB.Event.subscribe('auth.authResponseChange', function(response) {
-    // Here we specify what we do with the response anytime this event occurs. 
+    // Here we specify what we do with the response anytime this event occurs.
     if (response.status === 'connected') {
       // The response object is returned with a status field that lets the app know the current
-      // login status of the person. In this case, we're handling the situation where they 
+      // login status of the person. In this case, we're handling the situation where they
       // have logged in to the app.
       testAPI();
     } else if (response.status === 'not_authorized') {
       // In this case, the person is logged into Facebook, but not into the app, so we call
-      // FB.login() to prompt them to do so. 
-      // In real-life usage, you wouldn't want to immediately prompt someone to login 
+      // FB.login() to prompt them to do so.
+      // In real-life usage, you wouldn't want to immediately prompt someone to login
       // like this, for two reasons:
-      // (1) JavaScript created popup windows are blocked by most browsers unless they 
+      // (1) JavaScript created popup windows are blocked by most browsers unless they
       // result from direct interaction from people using the app (such as a mouse click)
       // (2) it is a bad experience to be continually prompted to login upon page load.
       FB.login();
     } else {
-      // In this case, the person is not logged into Facebook, so we call the login() 
+      // In this case, the person is not logged into Facebook, so we call the login()
       // function to prompt them to do so. Note that at this stage there is no indication
       // of whether they are logged into the app. If they aren't then they'll see the Login
-      // dialog right after they log in to Facebook. 
+      // dialog right after they log in to Facebook.
       // The same caveats as above apply to the FB.login() call here.
       FB.login();
     }
@@ -65,12 +68,29 @@
    ref.parentNode.insertBefore(js, ref);
   }(document));
 
-  // Here we run a very simple test of the Graph API after login is successful. 
-  // This testAPI() function is only called in those cases. 
+  // Here we run a very simple test of the Graph API after login is successful.
+  // This testAPI() function is only called in those cases.
   function testAPI() {
     console.log('Welcome!  Fetching your information.... ');
     FB.api('/me', function(response) {
       console.log('Good to see you, ' + response.name + '.');
+    });
+  }
+
+  // parse facebook login
+  function facebookLogin() {
+    Parse.FacebookUtils.logIn(null, {
+      success: function(user) {
+        if (!user.existed()) {
+          alert("User signed up and logged in through Facebook!");
+        } else {
+          alert("User logged in through Facebook!");
+        }
+      },
+      error: function(user, error) {
+        alert("User cancelled the Facebook login or did not fully authorize.");
+      }
+
     });
   }
 </script>
@@ -86,8 +106,18 @@
 <div class="jumbotron">
   <h1>Welcome to Clic.</h1>
 </div>
-<div class="fb-login-button" data-width="750" data-height="200" data-max-rows="1" data-show-faces="false"></div>
 
+<!-- shitty login form -->
+<form>
+  <div>Email: <input type="text" name="email"></div>
+  <div>Password: <input type="password" name="pass"></div>
+  <button type="submit" class="btn btn-default">Sign in</button>
+</form>
+
+<!-- testing login via facebook sdk and parse sdk -->
+<div class="fb-login-button" data-width="750" data-height="200" data-max-rows="1" data-show-faces="true"></div>
+
+<a href="#" onclick="facebookLogin()">Parse Facebook Login</a>
 </body>
 
 </html>
