--- a/clic/cloud/views/make.ejs
+++ b/clic/cloud/views/make.ejs
@@ -1,7 +1,4 @@
-<html>
-<head></head>
-
-<body>
+<script type="text/template" id="make_template">
 
 <div class="row">
   <div class="face">Test</div>
@@ -9,5 +6,4 @@
   <div class="when">Hithere</div>
 </div>
 
-</body>
-</html>
+</script>
